@@ -1,3 +1,7 @@
+2008-04-25 TualatriX <tualatrix@gmail.com>
+
+	* programs/python/ubuntu-tweak: Compiz Fusion.
+
 2008-04-24 TualatriX <tualatrix@gmail.com>
 
 	* programs/python/ubuntu-tweak: 加入Keybinding功能。
